# EMaGerLib

./: .gitignore  README.md  config_emager.py  libemg_realtime_control.py  libemg_realtime_prediction.py  libemg_sgt.py  libemg_train_cnn.py  libemg_visualize.py  pyproject.toml  requirements.txt  test_hand_control.py  test_hand_wave.py  test_psyonic_hand.py
config_examples/: base_config_example.py  base_config_example.yaml  old_config_emager.py
control/: gesture_decoder.py
docs/: CLI.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md  TROUBLESHOOTING.md
emager_tools/config/: core.py  core_config.py  load_config.py  loader.py  save_config.py  util.py
emager_tools/control/: gesture_decoder.py  psyonic_control.py
emager_tools/utils/: arg_parser.py  find_usb.py  gestures_json.py  utils.py
emager_tools/visualization/: realtime_gui.py
emagerlib/: __init__.py
emagerlib/config/: core_config.py  load_config.py  save_config.py
emagerlib/control/: __init__.py  ble_client.py  constants.py  gesture_decoder.py  interface_control.py  psyonic_control.py  psyonic_teensy_control.py  serial_com.py
emagerlib/utils/: arg_parser.py  find_models.py  find_usb.py  gestures_json.py  streamer_utils.py
emagerlib/visualization/: realtime_gui.py
examples/: main.py
examples/data_collection/: screen_guided_trainning.py
examples/gui/: command_launcher.py
examples/hand_control/: interact_teensy_hand.py  test_hand_control.py  test_hand_wave.py  test_psyonic_hand.py  test_teensy_hand.py
examples/realtime/: realtime_control.py  realtime_control_teensy.py  realtime_control_threads.py  realtime_prediction.py
examples/training/: config_train-model.py  finetune_cnn.py  train_cnn.py  train_cnn_big.py
examples/visualisation/: libemg_visualize.py  live_64_channel.py  live_64_channel_v1.py  live_64_channel_v3.py  live_heatmap.py  live_imu.py
models/: Felix_5sessions.pth
old_configs/: base_config.py  config.txt  config_main.py
tests/: run_all_tests.py  test_arg_parser.py  test_config.py  test_constants.py  test_find_models.py  test_gestures_json.py  test_gui_launcher.py  test_realtime_control.py  test_utils.py
